# Snooker2D

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml
docs/: ADDING_FEATURES.md  ARCHITECTURE.md  B.md  DESIGN.md  DEV_SETUP.md  FEATURE_ENGLISH.md  MODEL_VIEWMODEL.md  MVVM_FINAL_ARCHITECTURE.md  MVVM_REFACTOR_GUIDE.md  NOTES.md  TASK_ALLOCATION.md  TEST.md
docs/REPORTS/: midterm-dev-a.tex  midterm-dev-b.tex  midterm-dev-c.tex  midterm-report.tex  midterm-summary.tex
docs/REPORTS/final/: final-report.tex
docs/app/: design.md  test.md
docs/common/: design.md  test.md
src/: main.cpp
src/app/: App.cpp  App.h  AppConfig.h  MainWindow.cpp  MainWindow.h
src/common/: Constants.h  MathUtils.cpp  MathUtils.h  Types.h
src/common/contracts/: ContractsInit.cpp  ContractsInit.h  GameUiBus.cpp  GameUiBus.h  GameViewState.h
src/model/: Ball.cpp  Ball.h  GameState.cpp  GameState.h  Physics.cpp  Physics.h  Player.cpp  Player.h  Rules.cpp  Rules.h  Table.cpp  Table.h
src/view/: CueControl.cpp  CueControl.h  EnglishControlPanel.cpp  EnglishControlPanel.h  GameControlPanel.cpp  GameControlPanel.h  GameInfoPanel.cpp  GameInfoPanel.h  GameView.cpp  GameView.h  MainWindow.cpp  MainWindow.h  ScoreBoard.cpp  ScoreBoard.h  UiLanguage.cpp  UiLanguage.h
src/viewmodel/: CueControlViewModel.cpp  CueControlViewModel.h  GameSessionViewModel.cpp  GameSessionViewModel.h  GameViewModel.cpp  GameViewModel.h  ScoreViewModel.cpp  ScoreViewModel.h
tests/: test_ball.cpp  test_englishcontrolpanel.cpp  test_gamecontrolpanel.cpp  test_gamestate.cpp  test_gameview.cpp  test_mathutils.cpp  test_physics.cpp  test_player.cpp  test_rules.cpp  test_utils.h  test_viewmodel.cpp
tests/architecture/: check_mvvm_boundaries.ps1
